# cpplib

./: CMakeLists.txt  CMakePresets.json  ReadMe.md
.github/actions/ubuntu-build-steps/: action.yml
.github/workflows/: ubuntu-build.yml  ubuntu-coverage.yml  ubuntu-sanitizers.yml  ubuntu-static-analysis.yml  windows-build.yml
cmake/: coverage.cmake  packaging.cmake
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/include/cpplib/: cpplib.hpp
src/source/: cpplib.cpp
test/: CMakeLists.txt
test/test_install/: CMakeLists.txt
test/test_install/cpplib_install_test_template/: CMakeLists.txt  CMakePresets.json  main.cpp
test/test_install/cpplib_install_test_template/cmake/: Warnings.cmake
test/using_google_test/: CMakeLists.txt  google_test_usage.cpp
